# kyoushi-dataset

./: .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml  test.py
.github/workflows/: cd.yml  ci.yml  docs.yml
cli/: index.html
contributing/: index.html
docs/: processors.md  rules.md
docs/examples/: process.md
docs/getting_started/: intro.md  label.md  prepare.md  process.md  sample.md
docs/reference/: config.md  elasticsearch.md  labels.md  parser.md  pcap.md  processors.md  sample.md  templates.md  utils.md
docs/usage/: cli.md
examples/process/: index.html
examples/processing/: process.yaml
examples/processing/config/: attack_queries.yaml  logs.yaml
examples/processing/logstash/: auditd-ingest.yml  jvm.options  logstash.yml  openvpn-index-template.json  pipelines.yml
examples/processing/logstash/conf.d/: 0000_pre_process.conf  input.conf  (+1 more)
examples/processing/templates/: groups.json.j2
getting_started/intro/: index.html
getting_started/label/: index.html
getting_started/prepare/: index.html
getting_started/process/: index.html
getting_started/sample/: index.html
license/: index.html
processors/: index.html
reference/config/: index.html
reference/elasticsearch/: index.html
reference/labels/: index.html
reference/parser/: index.html
reference/pcap/: index.html
reference/processors/: index.html
reference/sample/: index.html
reference/templates/: index.html
reference/utils/: index.html
rules/: index.html
search/: search_index.json
src/cr_kyoushi/dataset/: __init__.py  __main__.py  cli.py  config.py  elasticsearch.py  labels.py  parser.py  pcap.py  processors.py  sample.py  templates.py  utils.py
stylesheets/: extra.css
tests/: test_file_loader.py  test_placeholder.py
tests/fixtures/: test.json  test.yml
(+11 files in other folders)
